# TODataFactory

./: .gitattributes  .gitignore  EXPERIMENT_MANAGER_GUIDE.md  README.md  experiment_manager.py  generate_dataset.py  main.py  pyproject.toml  requirements.txt  run_factory.py  test_dims.py  test_zero_load.py  topopt_orchestrator.py  verify_single_load.py  verify_tensor.py  visualization_notebook.ipynb
config/: default.yaml  high_resolution.yaml  hpc_avx512.yaml  quick_test.yaml  sparse_structures.yaml  varied_loads.yaml
config/schemas/: experiment_schema.yaml
docs/: api_reference.md  architecture.md  development.md  future_improvements.md  multigrid_explained.md  user_guide.md
examples/: basic_workflow.py  batch_generation.py  custom_boundary_conditions.py  custom_loads.py
experiments/EXP_20260129_143758_64x32x32/: config.yaml  dataset_index.json  sample_0001_inputs.npy  sample_0001_target.npy  sample_0002_inputs.npy  sample_0002_target.npy
notebooks/: 01_visualization.ipynb
paired_dataset/: dataset_index.json  sample_0001_inputs.npy  sample_0001_target.npy  sample_0002_inputs.npy  sample_0002_target.npy  sample_0003_inputs.npy  sample_0003_target.npy
scripts/: benchmark_solver.py  compare_experiments.py  run_experiment.py  run_experiments.py  validate_dataset.py
solver/: Makefile
solver/include/: grid_utilities.h  stencil_optimization.h  write_vtk.h
solver/src/: grid_utilities.c  stencil_optimization.c  top3d.c  write_vtk.c
tests/: test_boundary_conditions.py  test_grid.py  test_loads.py  test_solver.py  test_tensors.py
topopt_ml/: __init__.py
topopt_ml/config/: __init__.py  (+2 more)
(+13 files in other folders)
