[project]
name = "newam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.1",
    "plotly>=6.5.2",
    "pyvista>=0.46.5",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
