[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topopt-ml"
version = "0.1.0"
description = "ML Pipeline for Topology Optimization Dataset Generation"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Ettore Miglioranza", email = "ettore.miglioranza@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20.0",
    "pyvista>=0.38.0",
    "pyyaml>=6.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "jupyter>=1.0",
]

[project.scripts]
topopt-generate = "topopt_ml.experiments.manager:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["topopt_ml*"]
